1.985 修正定期資產增加錯誤